Bug 600972 - Improved text alignment for PGF export

https://bugzilla.gnome.org/show_bug.cgi?id=600972#c7